Details
-
Bug
-
Resolution: Done
-
P5: Not important
-
Qt Creator 4.0.0
-
None
-
Windows 7 x64
Description
Steps to reproduce:
1. Create a new Project in Gerrit (don't create initial commit!)
2. Clone the repo with Creator
3. Commit changes
4. Open Push to Gerrit, it shows only <Detached HEAD> as remote
5. Git fails to push to refs/for/<Detached HEAD>
The remote branch combo box could be editable if no suitable branch is found or could contain "master"